context path bug

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Spring
 server.port=8080
 spring.application.name=clean-architecture-coroutines
-server.servlet.contextPath=/clean-architecture-coroutines
+spring.webflux.base-path=/clean-architecture-coroutines
 
 # Book Api
 book.host=https://www.googleapis.com/
